--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=EMcL0ioAAAAJ"
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-9099-0436"
-  semantic         : # URL
+  semantic         : "https://www.semanticscholar.org/author/Boris-Orekhov/2080424505"
   pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Boris-Orekhov"
 
