--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ author:
   twitter          : "nevmenandr" # Username for X / Twitter
   vine             : # Username
   weibo            : # Username
-  wikipedia        : # Username
+  wikipedia        : "Nevmenandr" # Username
   xing             : # Username
   youtube          : # Username
   zhihu            : # URL
