--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
   weibo            : # Username
   wikipedia        : "Nevmenandr" # Username
   xing             : # Username
-  youtube          : "user-qr7te9em6r" # Username
+  youtube          : # "user-qr7te9em6r" # Username
   zhihu            : # URL
 
 
