--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author:
   # Social media
   bluesky          : "nevmenandr.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
-  flickr           : # Username
+  flickr           : "nevmenandr" # Username
   foursquare       : # Username
   goodreads        : # Username
   google_plus      : # Username
