--- a/_config.yml
+++ b/_config.yml
@@ -58,11 +58,11 @@ author:
   instagram        : "nevmenandr"
   lastfm           : # Username
   linkedin         : # Username
-  mastodon         : # URL
+  mastodon         : "https://mastodon.social/@nevmenandr" # URL
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
-  steam            : # Username
+  steam            : "76561199241858764" # Username https://steamcommunity.com/profiles/76561199241858764/
   telegram         : "https://t.me/nevmenandr" # URL
   tumblr           : # Username
   twitter          : "nevmenandr" # Username for X / Twitter
