--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
-  steam            : "76561199241858764" # Username https://steamcommunity.com/profiles/76561199241858764/
+  steam            : # "76561199241858764" # Username https://steamcommunity.com/profiles/76561199241858764/
   telegram         : "https://t.me/nevmenandr" # URL
   tumblr           : # Username
   twitter          : "nevmenandr" # Username for X / Twitter
